--- a/client/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/client/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -15,14 +15,14 @@
   box-shadow: 0 0px 20px -2px #1f2235;
 }
 .about-me-profile {
-  width: 50%;
-  background-image: url("../../assets/AboutMe/me.jpg");
+  width: 30%;
+  background-image: url("../../assets/AboutMe/me3.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 .about-me-details {
-  width: 48%;
+  width: 68%;
   text-align: justify;
   padding: 30px;
 }
@@ -53,6 +53,9 @@
 }
 .about-me-options .highlighted-btn {
   margin: 0 0 0 30px;
+}
+.about-me-options .highlighted-btn:hover {
+  opacity: 0.8;
 }
 
 @media only screen and (max-width: 1110px) {
