--- a/client/src/PortfolioContainer/Home/Footer/Footer.css
+++ b/client/src/PortfolioContainer/Home/Footer/Footer.css
@@ -7,8 +7,9 @@
 }
 .footer-parent {
   width: 100%;
-  height: 100%;
+  height: 100px;
   max-width: 1920px;
+  background-color: initial;
 }
 .footer-parent img {
   max-width: 100%;
