--- a/client/src/PortfolioContainer/Home/Header/Header.css
+++ b/client/src/PortfolioContainer/Home/Header/Header.css
@@ -1,8 +1,32 @@
 .header-container {
   display: flex;
   justify-content: center;
-  height: 140px;
+  width: 100%;
   color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0;
+  z-index: 100000;
+  transition: 0.3s linear;
+  /* height: 100px; */
+}
+.header-container-bg {
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  background-color: #fff;
+  padding: 10px 0;
+  transition: 0.3s linear;
+}
+.header-container-bg .header-option {
+  color: #000;
+}
+.header-container-bg .selected-header-option {
+  transition: 0.3s linear;
+  color: #ff5823;
+}
+.header-container-bg .header-logo {
+  transition: 0.3s linear;
+  color: #ff5823;
 }
 .header-parent {
   display: flex;
@@ -15,6 +39,7 @@
 .header-logo {
   font-size: 50px;
   font-family: "Poppins ExtraBold";
+  transition: 0.3s linear;
   color: #fff;
 }
 .header-options {
@@ -22,20 +47,51 @@
   align-items: center;
 }
 .header-option {
+  position: relative;
   font-size: 16px;
   cursor: pointer;
+  transition: 0.3s linear;
   font-weight: 600;
 }
+.header-option:hover {
+  color: #ff5823;
+}
+.header-option::after {
+  content: "";
+  position: absolute;
+  display: flex;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #ff5823;
+  transition: 0.3s linear;
+}
+.header-option:hover::after {
+  width: 100%;
+}
+
 .header-hamburger {
   display: none;
   color: #fff;
 }
 .header-option-seperator {
   margin: 0 50px 0 0;
+  transition: 0.3s linear;
   color: #fff;
 }
 .selected-header-option {
+  transition: 0.3s linear;
   color: #ff5823;
+}
+.selected-header-option::after {
+  content: "";
+  position: absolute;
+  display: flex;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ff5823;
+  transition: 0.3s linear;
 }
 @media only screen and (max-width: 1110px) {
   .header-parent {
@@ -83,5 +139,18 @@
   .show-hamburger-options {
     left: 0;
     opacity: 1;
+  }
+  .header-container-bg .header-option {
+    color: #fff;
+  }
+  .header-container-bg .header-hamburger-bars {
+    font-size: 30px;
+    cursor: pointer;
+    margin: 0 10px;
+    transition: 0.3s linear;
+    color: #1f2235;
+  }
+  .header-container-bg .selected-header-option {
+    color: #ff5823;
   }
 }
