--- a/client/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile/Profile.css
@@ -5,6 +5,7 @@
   justify-content: center;
   height: 10%;
   min-height: fit-content;
+  margin-top: 100px;
 }
 .profile-parent {
   display: flex;
@@ -55,7 +56,7 @@
 .profile-picture-bg {
   height: 92%;
   width: 92%;
-  background-image: url("../../../assets/Home/profilephoto.jpg");
+  background-image: url("../../../assets/Home/me.jpeg");
   background-size: cover;
   border-radius: 50%;
   background-repeat: no-repeat;
@@ -86,7 +87,6 @@
     font-size: 12px;
   }
   .profile-options .btn {
-    width: 120px;
     padding: 11px 0;
     z-index: 700;
   }
@@ -119,6 +119,7 @@
   .profile-options,
   .profile-details-role {
     text-align: center;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 375px) {
