--- a/client/src/PortfolioContainer/Resume/Resume.css
+++ b/client/src/PortfolioContainer/Resume/Resume.css
@@ -11,6 +11,7 @@
   display: flex;
   height: 360px;
   width: 1000px;
+  box-shadow: 0 0px 20px -2px #1f2235;
 }
 
 .resume-bullets {
@@ -93,7 +94,7 @@
 .resume-screen-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   height: 360px;
   width: 100%;
 }
@@ -101,6 +102,7 @@
 .resume-heading {
   display: flex;
   flex-direction: column;
+  margin: 0 10px;
 }
 
 .resume-main-heading {
@@ -113,6 +115,7 @@
   color: var(--dark-orange);
   font-size: 16px;
   font-family: "Poppins SemiBold";
+  margin-right: 10px;
 }
 
 .experience-description {
@@ -133,12 +136,13 @@
   font-size: 14px;
   font-family: "Poppins SemiBold";
   color: var(--black);
-  margin: 10px 0 0 0;
+  margin: 5px 0 10px 0;
 }
 
 .resume-heading-description {
   font-size: 12px;
   text-align: justify;
+  margin-bottom: 10px;
 }
 
 .heading-date {
@@ -229,5 +233,8 @@
 
   .selected-bullet {
     width: 100%;
+  }
+  .programming-skills-container {
+    margin: 0 40px;
   }
 }
